Fix the IE layout problem with the terms of use widget in another way, more robust

--- a/peer/staticfiles/css/layout.css
+++ b/peer/staticfiles/css/layout.css
@@ -660,24 +660,6 @@ section ul.errorlist li,
     -moz-box-shadow: none;
 }
 
-/* Terms of use */
-
-input.legalInput {
-    margin-top: -24px !important;
-}
-
-label.label_tou,
-label[for=id_tou] {
-    margin-left: 2em;
-    line-height: 1em;
-    padding: 0;
-}
-
-textarea.legalTerms {
-    width: 318px !important;
-    height: 150px !important;
-}
-
 /* Ui styles modifications */
 .ui-widget {
     font-size: 12px;
